# llm-twin

./: .gitignore  Dockerfile  README.md  compose.yaml  flake.nix  pyproject.toml  ruff.toml
.github/workflows/: container_image.yml
.zed/: settings.json
src/cdc/: cdc.py  main.py
src/data_fetch/: data_fetch.py  main.py
src/data_fetch/data_fetch/: constants.py  doc_storage.py  models.py
src/data_fetch/data_fetch/fetchers/: base.py  dummy.py  telegram.py
src/data_fetch/data_fetch/keystore/: azure.py  base.py  env.py
src/diagrams/: architecture.d2  three-pipeline-design.d2
src/feature_pipeline/: bytewax_feature_pipeline.py
src/feature_pipeline/feature_pipeline/data_flow/: stream_input.py  stream_output.py
src/feature_pipeline/feature_pipeline/data_logic/: dispatchers.py
src/feature_pipeline/feature_pipeline/models/: data_model.py
src/scripts/: local-infra-down.sh  local-infra-up.sh  pre-commit.sh  render-diagrams.sh  render_diagrams.sh
